# spectropaint

./: README.md  main.py  pyproject.toml
src/spectropaint/: __init__.py  app.py  audio.py  controller.py  painter.py  spectrogram.py  view.py  window.py
