[project]
name = "spectropaint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.0.0",
    "pyglet>=2.0.15",
    "pyaudio>=0.2.14",
    "scipy>=1.17.0",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
